# shl24

./: .gitignore  Dockerfile  README.md  docker-compose.yml  evaluate.py  indexer.py  main.py  pyproject.toml  run.sh
rag/: app.py  config.py  dto.py
rag/api/: chat.py
rag/db/: vector.py
rag/db/sql/: connection.py  models.py
rag/llm/: __init__.py  yandex.py
rag/modules/: agent.py  guard.py  indexer.py  internet.py  router.py  search.py
rag/service/: chat.py  handler.py
tests/: question-answers.jsonl
