[tool.poetry]
name = "SHL24"
version = "0.1.0"
description = "Создание модульной (и желательно эффективной) RAG-системы"
authors = ["Anton Belousov <anton@belousov.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"
llama-index-core = "^0.12.37"
llama-index-readers-file = "^0.4.7"
llama-index-vector-stores-weaviate = "^1.3.1"
llama-index-embeddings-langchain = "^0.3.0"
langchain = "^0.3.25"
llama-index-tools-brave-search = "^0.3.0"
inscriptis = "^2.6.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.41"
langchain-community = "^0.3.24"
yandexcloud = "^0.346.0"
langsmith = "^0.3.42"
weaviate-client = "^4.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
